--- a/package.json
+++ b/package.json
@@ -3,14 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.1",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
     "@chakra-ui/icons": "^2.0.19",
     "@chakra-ui/react": "^1",
     "@emotion/react": "^11",
@@ -22,24 +14,33 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@tanstack/react-table": "^8.9.1",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "chakra-dayzed-datepicker": "^0.2.8",
-    "date-fns": "^2.30.0",
+    "date-fns": "^3.6.0",
     "dayzed": "^3.2.3",
     "eslint": "8.41.0",
     "formik": "^2.4.1",
     "framer-motion": "^6",
+    "react": "^18.2.0",
     "react-countup": "^6.5.0",
+    "react-date-range": "^2.0.1",
+    "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-elastic-carousel": "^0.11.5",
     "react-icons": "^4.9.0",
     "react-query": "^3.39.3",
     "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^6.22.1",
+    "react-scripts": "5.0.1",
     "react-select": "^5.7.4",
     "react-table": "^7.8.0",
     "react-visibility-sensor": "^5.1.1",
     "styled-components": "^6.0.5",
+    "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
   },
   "scripts": {
